--- a/plantbreeder.html
+++ b/plantbreeder.html
@@ -38,7 +38,7 @@
         <hr>
         <p>In this video you see the tomato I grew for 46 days with the "Plant Breeder":  -------  <span>DEC 2022</span></p>
         <video id="vid"  controls="" loop=""> <source src="Growingtomato.mp4" ></video>
-        <img class="image" src="pb3.jpeg" alt="">
+        <img class="image" src="pb3.jpeg">
         <br>
         <p>After 46 days, the weather started to warm up and I took it out to the balcony. It continued to grow under the sun.</p>
         <img class="image" src="domates1.jpg">
