--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         <br>
         <li><span>Web Development</span><br>HTML, <br> CSS, <br> Javascript, <br>Node.js , <br>Bootstrap.</li>
         <br>
-        <li><span>3D design</span><br>Tinkercad, <br> Fusion360</li>
+        <li><span>3D design&print</span><br>Tinkercad, <br> Fusion360</li>
+        <br>
         <li><span>Photoshop</span> <br> Adobe Photoshop</li>
+        <br>
+        <li><span>Tailor</span></li>
     </ul>
 </div>
 <div class="tab-contents" id="experience">
@@ -62,7 +65,7 @@
         <br>
         <li><span> 18-19 Nov 2021</span> <br>First place at "21st Century schools" competition (regional)</li>
         <br>
-        <li><span>Sep 2020 - July 2022</span> <br>Went to the technology school "jCoders Academy"</li>
+        <li><span>Sep 2020 - July 2022</span> <br>Went to the "jCoders Academy" technology school</li>
         <br>
         <li><span>June 2022 - August 2022</span><br>Tailor at "Intercom" textile company</li>
         <br>
@@ -75,11 +78,11 @@
 </div>
 <div class="tab-contents" id="education">
     <ul>
-        <li><span>Electric-electronics3</span> <br>Electronic components knowledge,<br>Electronic circuit board design, <br>etc.</li>
+        <li><span>Primary School</span> <br>"Abdyl Frashëri"</li>
         <br>
-        <li><span>Robotic Software</span> <br>Using and programming "Arduino" with C++ , <br>Using and programming "Micro:Bit" with javascript.</li>
+        <li><span>Secondary School</span><br>"Hysen Rexhepi"</li>
         <br>
-        <li><span>Web Development</span><br>HTML, <br> CSS, <br> Javascript, <br>Node.js , <br>Bootstrap.</li>
+        <li><span>High School</span><br>"Gjon Buzuku"</li>
     </ul>
 </div>
 </div>     
