--- a/plantbreeder.html
+++ b/plantbreeder.html
@@ -20,7 +20,7 @@
         <p> My first robotics project, "Plant Breeder
         ATC" which I worked on for seven months, and won
         1 place in the "21 st Century Schools" competition in 2021
-        that was organised in Western Balkan.
+        that was organised in Western Balkan.I was only 14 years old when I did this project.
         "Plant Breeder ATC" is a robotic device that can
         fulfill all the needs of a plant🌱 that contains various
         systems for different tasks and enabling the growth
