--- a/index.html
+++ b/index.html
@@ -44,45 +44,47 @@
 </div>
 <div class="tab-contents active-tab" id="skills">
     <ul>
-        <li><span>Electric-electronics</span> <br>Electronic components&tools knowledge,<br>Electronic circuit board design,<br>Workshop experience, <br>etc.</li>
+        <li><span>Electric-electronics</span> <br>Electronic components&tools knowledge and usage,<br>Electronic circuit board design,<br>Workshop experience, <br>etc.</li>
         <br>
         <li><span>Robotic Software</span> <br>Using and programming "Arduino" with C++ , <br>Using and programming "Micro:Bit" with javascript.</li>
         <br>
         <li><span>Web Development</span><br>HTML, <br> CSS, <br> Javascript, <br>Node.js , <br>Bootstrap.</li>
         <br>
-        <li><span>3D design&print</span><br>Tinkercad, <br> Fusion360</li>
+        <li><span>3D design&print</span><br>Tinkercad, <br> Fusion360.</li>
         <br>
-        <li><span>Photoshop</span> <br> Adobe Photoshop</li>
+        <li><span>Photoshop</span> <br> Adobe Photoshop.</li>
         <br>
-        <li><span>Tailor</span></li>
+        <li><span>Microsoft office</span> <br> M.Powerpoint, <br> M.Word, <br> M.Excel, <br> M.Onenote.</li>
+        <br>
+        <li><span>Tailor</span> <br> I can work on most sewing machines.</li>
     </ul>
 </div>
 <div class="tab-contents" id="experience">
     <ul>
-        <li><span>2018</span><br>Went to a Tailor Course </li>
+        <li><span>20 Feb 2024 - ... </span><br>Electronics and Robotics Software teacher at Yunus Emre Institute, Department of IT.</li>
         <br>
-        <li><span>June 2020 - June 2021</span> <br>Tailor at "ArtaTex" textile company </li>
+        <li><span>August 2023</span><br>Introduction of 3D Design&Courses to Students in the framework of the program "Genç Komek" at Yunus Emre Institute, Department of IT. </li>
         <br>
-        <li><span> 18-19 Nov 2021</span> <br>First place at "21st Century schools" competition (regional)</li>
+        <li><span>June 2023 - August 2023</span><br>Tailor at "ArtaTex" textile company that produces trend clothes in Kosovo. </li>
         <br>
-        <li><span>Sep 2020 - July 2022</span> <br>Went to the "jCoders Academy" technology school</li>
+        <li><span>June 2022 - August 2022</span><br>Tailor at "Intercom" textile company that produces worker clothes and sells abroad.</li>
         <br>
-        <li><span>June 2022 - August 2022</span><br>Tailor at "Intercom" textile company</li>
+        <li><span>Jan 2020 - Apr 2022</span> <br>Went to the "jCoders Academy"-STEM Certified, technology school.</li>
         <br>
-        <li><span>June 2023 - August 2023</span><br>Tailor at "ArtaTex" textile company</li>
+        <li><span> 12 Nov 2021</span> <br>First place at "21st Century Schools" national competition, organised by British Government in Western Balkans.</li>
         <br>
-        <li><span>August 2023</span><br>Introduction of 3D Design&Courses to Students at Yunus Emre Institute, Department of IT </li>
+        <li><span>June 2020 - June 2021</span> <br>Tailor at "ArtaTex" textile company. </li>
         <br>
-        <li><span>20 Feb 2024 - ... </span><br>Electronics and Robotics Software teacher at Yunus Emre Institute, Department of IT</li>
+        <li><span>2018</span><br>Went to a Tailor Course, where learned most things about tailoring. </li>
     </ul>
 </div>
 <div class="tab-contents" id="education">
     <ul>
-        <li><span>Primary School</span> <br>"Abdyl Frashëri"</li>
+       <li><span>High School 2021-2024</span><br>"Gjon Buzuku" - Prizren</li> 
         <br>
-        <li><span>Secondary School</span><br>"Hysen Rexhepi"</li>
+        <li><span>Secondary School 2017-2021</span><br>"Hysen Rexhepi" - Prizren</li>
         <br>
-        <li><span>High School</span><br>"Gjon Buzuku"</li>
+        <li><span>Primary School 2012-2017</span> <br>"Abdyl Frashëri" - Prizren</li>
     </ul>
 </div>
 </div>     
@@ -98,9 +100,9 @@
             <h2>Plant Breeder</h2>  
             <p>My first robotics project, "Plant Breeder
                 ATC" which I worked on for seven months, and won
-                1 place in the "21 st Century Schools" competition in 2021
-                that was organised in Western Balkan. When I built 
-                this project I was 14.</p>
+                1st place in the "21 st Century Schools" national competition in 2021
+                that was organised by British Government in Western Balkans. When I built 
+                this project I was 13-14.</p>
             <a href="plantbreeder.html">Learn more</a>
         </div>
         <div>
@@ -114,13 +116,9 @@
             <a href="incubator.html">Learn more</a>
           </div>
         <div>
-            <h2>Excavator</h2>  
-            <p>Lorem Ipsum is simply dummy text of 
-               the printing and typesetting industry.
-               Lorem Ipsum has been the industry's standard
-               dummy text ever since the 1500s, 
-               when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.</p>
+            <h2>Hydraulic Excavator</h2>  
+            <p>I did this project, named "Hydraulic Excavator" , when I was around 11 years old.
+                This hydraulic excavator operates entirely on a hydro-mechanical system and incorporates a total of 6 syringes. </p>
           <a href="excavator.html">Learn more</a>
           </div>
     </div>
