--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
 <div class="about-col-2">
     <h1 class="sub-title">About Me</h1>
     <p>
-        I'm Jener ARAP, born in November 2006, and raised in Prizren, Kosovo. I have a deep passion for robotics and programming, dedicating myself to advancing in this field and contributing to the progress of my country. I have been involved in robotics since the age of 10 and have always been immensely curious about this domain. You can explore my robotic projects, skills, and work experience as evidence of my dedication. I have exerted considerable effort to progress in this field, attending technology schools, participating in competitions, and engaging in various robotic projects to gain more experience. Additionally, I worked in the textile industry to cover the expenses of attending technology school, purchasing necessary materials, electronic devices, and computers. Currently, starting from February 20, 2024, I will be teaching robotics at the Yunus Emre Institute Prizren center, where I have my workshop. Previously, I conducted a course on 3D design at the Yunus Emre Institute under the "Genç Komek" program. Stay tuned, as I will soon realize my biggest dream, which will be a first of its kind project in Kosovo. I plan to continue my university life in Türkiye in order to receive a higher quality education and reach advanced levels. Keep following me.</p>
+        Im Jener ARAP, born in November 2006, and raised in Prizren, Kosovo. I have a deep passion for robotics and programming, dedicating myself to advancing in this field and contributing to the progress of my country. I have been involved in robotics since the age of 10 and have always been immensely curious about this domain. You can explore my robotic projects, skills, and work experience as evidence of my dedication. I have exerted considerable effort to progress in this field, attending technology schools, participating in competitions, and engaging in various robotic projects to gain more experience. Additionally, I worked in the textile industry to cover the expenses of attending technology school, purchasing necessary materials, electronic devices, and computers. Currently, starting from February 20, 2024, I will be teaching robotics at the Yunus Emre Institute Prizren center, where I have my workshop. Previously, I conducted a course on 3D design at the Yunus Emre Institute under the "Genç Komek" program. Stay tuned, as I will soon realize my biggest dream, which will be a first of its kind project in Kosovo. I plan to continue my university life in Türkiye in order to receive a higher quality education and reach advanced levels. Keep following me;)</p>
 <div class="tab-titles">
 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
 <p class="tab-links" onclick="opentab('experience')">Experience</p>
 <p class="tab-links" onclick="opentab('education')">Education</p>
+<p class="tab-links" onclick="opentab('competitions')">Competitions</p>
 </div>
 <div class="tab-contents active-tab" id="skills">
     <ul>
-        <li><span>Electric-electronics</span> <br>Electronic components&tools knowledge and usage,<br>Electronic circuit board design,<br>Workshop experience, <br>etc.</li>
+        <li><span>Electric-electronics</span> <br>Electronic components&tools knowledge and usage,<br>Electronic circuit board design with AutoCad and Fritzing,<br>Workshop experience, <br>etc.</li>
         <br>
         <li><span>Robotic Software</span> <br>Using and programming "Arduino" with C++ , <br>Using and programming "Micro:Bit" with javascript.</li>
         <br>
@@ -53,7 +54,7 @@
         <br>
         <li><span>3D design&print</span><br>Tinkercad, <br> Fusion360.</li>
         <br>
-        <li><span>Photoshop</span> <br> Adobe Photoshop.</li>
+        <li><span>Photoshop&Video</span> <br> Adobe Photoshop, <br>Capcut.</li>
         <br>
         <li><span>Microsoft office</span> <br> M.Powerpoint, <br> M.Word, <br> M.Excel, <br> M.Onenote.</li>
         <br>
@@ -62,7 +63,7 @@
 </div>
 <div class="tab-contents" id="experience">
     <ul>
-        <li><span>20 Feb 2024 - ... </span><br>Electronics and Robotics Software teacher at Yunus Emre Institute, Department of IT.</li>
+        <li><span>March 2024 - ... </span><br>Electronics and Robotics Software teacher at Yunus Emre Institute, Department of IT.</li>
         <br>
         <li><span>August 2023</span><br>Introduction of 3D Design&Courses to Students in the framework of the program "Genç Komek" at Yunus Emre Institute, Department of IT. </li>
         <br>
@@ -86,7 +87,16 @@
         <li><span>Secondary School 2017-2021</span><br>"Hysen Rexhepi" - Prizren</li>
         <br>
         <li><span>Primary School 2012-2017</span> <br>"Abdyl Frashëri" - Prizren</li>
+        <hr>
+        <li><span>"jCoders Academy"-Technology School, Jan 2020-Apr 2022</span> <br>During these three academic years I dealed with: <br> <br>First year: Learning programmings basic logic by developing web games and apps,<br>Second year: Learning 3D design&print, Robotics&electronics. <br>Third year: "I have had the opportunity to work on photo editing, compositing, and design using Adobe Photoshop."</li>
     </ul>
+</div>
+<div class="tab-contents" id="competitions">
+<ul>
+    <li><span>Hackathon Prizren-Shkolla Digjitale</span><a href="https://www.facebook.com/share/p/u4dRif9wY7Q75pQa/?mibextid=xfxF2i" class="seemore"> - See more</a><br> The competition, which took place throughout the city, would announce the winner as the person who designed the best website after a two-day preparation period. However, due to a private reason, I could only participate in the project preparation phase of the competition and had to withdraw afterwards.</li>
+<li><span>21st Century Schools Kosova</span><a href="https://www.facebook.com/share/p/Kw4vTcnpqn6xEsDz/?mibextid=oFDknk" class="seemore"> - See more</a><br>On November 12, 2021, I participated in the robotics competition "21st Century Schools" organized by the United Kingdom in the Western Balkans and won first place🥇 nationally representing my school. The main idea of the competition was to create a project using the MicroBit microcontroller that benefits the community or improves and addresses its problems. I participated in this competition with my "Plant Breeder" project, which I worked on for 7 months.</li>
+<li><span>Hackathon#7 Kosova</span><a href="https://www.facebook.com/share/p/YPVWVosckMnwXt8s/?mibextid=xfxF2i" class="seemore"> - See more</a><br>The competition was divided into four main categories: 1) Health and Human Welfare, 2) Environment and Environmental Protection, 3) Education and Knowledge Sharing, and 4) Facilitating the Lives of Individuals with Special Needs. My team participated in the third category of the competition. The main objective of the competition was to develop software based on the specified categories to address problems and generate innovative solutions. Although we did not win first place in the competition but it was a good experience for us. I would like to mention that this was my first competition participation.</li>
+</ul>
 </div>
 </div>     
      </div>
@@ -104,7 +114,7 @@
                 1st place in the "21 st Century Schools" national competition in 2021
                 that was organised by British Government in Western Balkans. When I built 
                 this project I was 13-14.</p>
-            <a href="plantbreeder.html">Learn more</a>
+            <a href="plantbreeder.html">Click here to learn more</a>
         </div>
         <div>
             <h2>Chicken Incubator</h2>  
@@ -114,13 +124,13 @@
                 dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and
                scrambled it to make a type specimen book.</p>
-            <a href="incubator.html">Learn more</a>
+            <a href="incubator.html">Click here to learn more</a>
           </div>
         <div>
             <h2>Hydraulic Excavator</h2>  
             <p>I did this project, named "Hydraulic Excavator" , when I was around 11 years old.
                 This hydraulic excavator operates entirely on a hydro-mechanical system and incorporates a total of 6 syringes. </p>
-          <a href="excavator.html">Learn more</a>
+          <a href="excavator.html">Click here to learn more</a>
           </div>
     </div>
    </div>
