--- a/plantbreeder.html
+++ b/plantbreeder.html
@@ -13,14 +13,14 @@
              <div class="row">
         <div class="about-col-1">
            <a href="index.html"><i class="fa-solid fa-circle-arrow-left"></i></a>
-            <video id="ilkvid" controls="" loop=""> <source src="pb2.mp4" ></video>
+            <video id="ilkvid" controls="" loop="" autoplay> <source src="pb2.mp4" ></video>
         </div>
         <div class="about-col-2">
             <h1 class="sub-title">Plant Breeder</h1>        
         <p> My first robotics project, "Plant Breeder
         ATC" which I worked on for seven months, and won
         1 place in the "21 st Century Schools" competition in 2021
-        that was organised in Western Balkan.I was only 14 years old when I did this project.
+        that was organised in Western Balkan.
         "Plant Breeder ATC" is a robotic device that can
         fulfill all the needs of a plant🌱 that contains various
         systems for different tasks and enabling the growth
@@ -36,13 +36,13 @@
         the process begins. After a certain period of time
         the growth of the plant can be observed.</p>
         <hr>
-        <p>In this video you see the tomato I grew for 46 days with the "Plant Breeder":  -------  <span>DEC 2022</span></p>
+        <p>In this video you see the tomato I grew for 46 days with the "Plant Breeder":  -------  <span>March 2023</span></p>
         <video id="vid"  controls="" loop=""> <source src="Growingtomato.mp4" ></video>
-        <img class="image" src="pb3.jpeg">
+        <img class="image" src="pb3.jpeg" alt="">
         <br>
         <p>After 46 days, the weather started to warm up and I took it out to the balcony. It continued to grow under the sun.</p>
         <img class="image" src="domates1.jpg">
-        <img class="image" src="domates2.jpg" alt="">
+        <img class="image" src="domates2.jpg">
         </div>
     </body>
 </html>
