--- a/index.html
+++ b/index.html
@@ -118,12 +118,7 @@
         </div>
         <div>
             <h2>Chicken Incubator</h2>  
-            <p>Lorem Ipsum is simply dummy text of 
-                the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard
-                dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and
-               scrambled it to make a type specimen book.</p>
+            <p>The most comprehenssive project I made until now. It lasted 5 months to make it</p>
             <a href="incubator.html">Click here to learn more</a>
           </div>
         <div>
