--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
         <li><span>Photoshop&Video</span> <br> Adobe Photoshop, <br>Capcut.</li>
         <br>
         <li><span>Microsoft office</span> <br> M.Powerpoint, <br> M.Word, <br> M.Excel, <br> M.Onenote.</li>
-        <br>
-        <li><span>Tailor</span> <br> I can work on most sewing machines.</li>
     </ul>
 </div>
 <div class="tab-contents" id="experience">
@@ -67,22 +65,17 @@
         <br>
         <li><span>August 2023</span><br>Introduction of 3D Design&Courses to Students in the framework of the program "Genç Komek" at Yunus Emre Institute, Department of IT. </li>
         <br>
-        <li><span>June 2023 - August 2023</span><br>Tailor at "ArtaTex" textile company that produces trend clothes in Kosovo. </li>
-        <br>
-        <li><span>June 2022 - August 2022</span><br>Tailor at "Intercom" textile company that produces worker clothes and sells abroad.</li>
-        <br>
         <li><span>Jan 2020 - Apr 2022</span> <br>Went to the "jCoders Academy"-STEM Certified, technology school.</li>
         <br>
         <li><span> 12 Nov 2021</span> <br>First place at "21st Century Schools" national competition, organised by British Government in Western Balkans.</li>
-        <br>
-        <li><span>June 2020 - June 2021</span> <br>Tailor at "ArtaTex" textile company. </li>
-        <br>
-        <li><span>2018</span><br>Went to a Tailor Course, where learned most things about tailoring. </li>
+
     </ul>
 </div>
 <div class="tab-contents" id="education">
     <ul>
-       <li><span>High School 2021-2024</span><br>"Gjon Buzuku" - Prizren</li> 
+        <li><span>University 2024-</span><br>Bursa Uludag University</li> 
+        <br>
+        <li><span>High School 2021-2024</span><br>"Gjon Buzuku" - Prizren</li> 
         <br>
         <li><span>Secondary School 2017-2021</span><br>"Hysen Rexhepi" - Prizren</li>
         <br>
@@ -127,7 +120,17 @@
                 This hydraulic excavator operates entirely on a hydro-mechanical system and incorporates a total of 6 syringes. </p>
           <a href="excavator.html">Click here to learn more</a>
           </div>
-    </div>
+          <div>
+            <h2>Obstacle Avoiding Robot</h2>  
+            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+          <a href="obstacle.html">Click here to learn more</a>
+          </div>
+          <div>
+            <h2>Alarm System</h2>  
+            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+          <a href="alarm.html">Click here to learn more</a>
+          </div>
+        </div>
    </div>
 </div>
 <div id="contact">
