--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 <div class="tab-contents" id="education">
     <ul>
-        <li><span>University 2024-</span><br>Bursa Uludag University</li> 
+        <li><span>BSc 2024-...</span><br>Bursa Uludag University-Electrical & Electronic Engineering</li> 
         <br>
         <li><span>High School 2021-2024</span><br>"Gjon Buzuku" - Prizren</li> 
         <br>
@@ -111,7 +111,7 @@
         </div>
         <div>
             <h2>Chicken Incubator</h2>  
-            <p>The most comprehenssive project I made until now. It lasted 5 months to make it</p>
+            <p>The most comprehenssive project I made until now. It lasted 5 months to make it.</p>
             <a href="incubator.html">Click here to learn more</a>
           </div>
         <div>
@@ -130,6 +130,11 @@
             <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
           <a href="alarm.html">Click here to learn more</a>
           </div>
+          <div>
+            <h2>Light-Sensitive Automatic Lamp</h2>  
+            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+          <a href="light.html">Click here to learn more</a>
+          </div>
         </div>
    </div>
 </div>
@@ -143,7 +148,7 @@
         <br>
         <div class="social-icons">
             <a href="https://www.instagram.com/jenerarap1"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://youtube.com/@jenerarap5864"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://youtube.com/@Atechs24"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://www.facebook.com/yener.arap.3"><i class="fa-brands fa-facebook"></i></a>
         </div>
         <br>
