--- a/obstacle.html
+++ b/obstacle.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="about-col-2">
                     <h1 class="sub-title">Obstacle Avoiding Robot</h1>
-                    <p>It's a robotic car that perceives the obstacles in front of it and avoids them.</p>
+                    <p>This is an obstacle avoiding robot made by my students under my coordination. Our robot can detect obstacles up to 10 cm in front of it and adjust its direction accordingly to avoid collisions and obstacles. This project demonstrates the integration of sensors and navigation algorithms to create a functional and efficient obstacle-avoiding robot. Watch to see how our robot maneuvers around obstacles and explore the technology behind its design!</p>
                 </div>
                 <div class="about-col-1">
                     <!-- Video -->
