--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
      <div class="row">
 <div class="about-col-1">
-    <img src="about me portre.JPG" id="portre">
+    <img src="viber_image_2024-08-28_14-51-34-640.jpg" id="portre">
 </div>
 <div class="about-col-2">
     <h1 class="sub-title">About Me</h1>
