--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
     <title>MY PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/220f77e8b0.js" crossorigin="anonymous"></script>
@@ -37,7 +38,7 @@
 <div class="about-col-2">
     <h1 class="sub-title">About Me</h1>
     <p>
-        Im Jener ARAP, born in 2006 Prizren of Kosovo. I have a deep passion for robotics and programming, dedicating myself to advancing in this field and contributing to the progress of my country. I have been involved in robotics since the age of 11 and have always been immensely curious about this field. You can explore my robotic projects, skills, and work experience as evidence of my dedication. I have exerted considerable effort to progress in this field, attending technology schools, participating in competitions, and engaging in various robotic projects to gain more experience. Currently I'm teaching electronics and robotics software at the Yunus Emre Institute Prizren. Previously, I conducted a course on 3D design at the Yunus Emre Institute under the "Genç Komek" program. I plan to continue my university life abroad in order to receive a higher quality education and reach advanced levels. Keep following;)</p>
+        Im Jener ARAP, born in 2006 Prizren of Kosovo. I have a deep passion for robotics and programming, dedicating myself to advancing in this field and contributing to the progress of my country. I have been involved in robotics since the age of 11 and have always been immensely curious about this field. I have exerted considerable effort to progress in this field, attending technology schools, participating in competitions, and engaging in various robotic projects to gain more experience. Keep following;)</p>
 <div class="tab-titles">
 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
 <p class="tab-links" onclick="opentab('experience')">Experience</p>
