--- a/alarm.html
+++ b/alarm.html
@@ -17,8 +17,8 @@
                     <p>The projects purpose is to perceive any motion in room and activate the alarm.</p>
                 </div>
                 <div class="about-col-1">
-                    <video id="ilkvid" controls loop autoplay>
-                        <source src="alarmvid.mp4" type="video/mp4">
+                    <video id="ilkvid" controls loop >
+                        <source src="alarm.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
