--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
                 <li><a href="#about">About</a></li> 
                 <li><a href="#projects">My Projects</a></li>
                 <li><a href="#contact">Contact me</a></li>
+                <li><a href="https://youtube.com/@Atechs24"></i> < YouTube ></a></li>
                 <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
             </ul>
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p id="p1">Electric-electronics, Robotics software</p>
-            <h1>Hi, I'm <span> Jener</span> <br> from Kosovo</h1>
+            <p id="p1">Electronics and Robotics Software</p>
+            <h1>Hi, I'm <span> Jener</span> </h1>
         </div>
     </div>
    </div>
@@ -62,7 +63,7 @@
 </div>
 <div class="tab-contents" id="experience">
     <ul>
-        <li><span>March 2024 - ... </span><br>Electronics and Robotics Software teacher at Yunus Emre Institute, Department of IT.</li>
+        <li><span>June 2024 - September 2024 </span><br>Electronics and Robotics Software teacher at Bonevet Yunus Emre, excatly at Yunus Emre Institute - Department of IT. You can look it on Instagram, @bonevet_yee</li>
         <br>
         <li><span>August 2023</span><br>Introduction of 3D Design&Courses to Students in the framework of the program "Genç Komek" at Yunus Emre Institute, Department of IT. </li>
         <br>
@@ -74,15 +75,13 @@
 </div>
 <div class="tab-contents" id="education">
     <ul>
-        <li><span>BSc 2024-...</span><br>Bursa Uludag University-Electrical & Electronic Engineering</li> 
-        <br>
         <li><span>High School 2021-2024</span><br>"Gjon Buzuku" - Prizren</li> 
         <br>
         <li><span>Secondary School 2017-2021</span><br>"Hysen Rexhepi" - Prizren</li>
         <br>
         <li><span>Primary School 2012-2017</span> <br>"Abdyl Frashëri" - Prizren</li>
         <hr>
-        <li><span>"jCoders Academy"-Technology School, Jan 2020-Apr 2022</span> <br>During these three academic years I dealed with: <br> <br>First year: Learning programmings basic logic by developing web games and apps,<br>Second year: Learning 3D design&print, Robotics&electronics. <br>Third year: "I have had the opportunity to work on photo editing, compositing, and design using Adobe Photoshop."</li>
+        <li><span>"jCoders Academy"-Technology School, Jan 2020-Apr 2022</span> <br>During these three academic years I learned: <br> <br>First year: Learning programmings basic logic by developing web games and apps,<br>Second year: Learning 3D design&print, Robotics&electronics. <br>Third year: Work on photo editing, compositing, and design using Adobe Photoshop.</li>
     </ul>
 </div>
 <div class="tab-contents" id="competitions">
@@ -112,7 +111,7 @@
         </div>
         <div>
             <h2>Chicken Incubator</h2>  
-            <p>The most comprehenssive project I made until now. It lasted 5 months to make it.</p>
+            <p>The most comprehenssive project I made until now. A chicken incubator machine which lasted 5 months to make it.</p>
             <a href="incubator.html">Click here to learn more</a>
           </div>
         <div>
@@ -123,18 +122,33 @@
           </div>
           <div>
             <h2>Obstacle Avoiding Robot</h2>  
-            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+            <p>One of the projects my students made under my coordination.</p>
           <a href="obstacle.html">Click here to learn more</a>
           </div>
           <div>
-            <h2>Alarm System</h2>  
-            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+            <h2>Home-Security System</h2>  
+            <p>This project involves creating a home-security alarm system that detects movements within a room.</p>
           <a href="alarm.html">Click here to learn more</a>
           </div>
           <div>
             <h2>Light-Sensitive Automatic Lamp</h2>  
-            <p>One of the projects my students made under my coordination at Yunus Emre Institute.</p>
+            <p>One of the projects my students made under my coordination.</p>
           <a href="light.html">Click here to learn more</a>
+          </div>
+          <div>
+            <h2>Secure Box</h2>  
+            <p>One of the projects my students made under my coordination.</p>
+          <a href="secure.html">Click here to learn more</a>
+          </div>
+          <div>
+            <h2>Distance-Meter</h2>  
+            <p>The objective of this project is to design and build a distance measuring device that accurately measures the distance to an object</p>
+          <a href="distance.html">Click here to learn more</a>
+          </div>
+          <div>
+            <h2>RFID-Based Door Lock System</h2>  
+            <p>The objective of this project is to design and implement a secure door lock system that uses RFID technology for access control.</p>
+          <a href="doorlock.html">Click here to learn more</a>
           </div>
         </div>
    </div>
