--- a/obstacle.html
+++ b/obstacle.html
@@ -14,12 +14,12 @@
             <div class="row">
                 <div class="about-col-2">
                     <h1 class="sub-title">Obstacle Avoiding Robot</h1>
-                    <p>This is an obstacle avoiding robot made by my students under my coordination. Our robot can detect obstacles up to 10 cm in front of it and adjust its direction accordingly to avoid collisions and obstacles. This project demonstrates the integration of sensors and navigation algorithms to create a functional and efficient obstacle-avoiding robot. Watch to see how our robot maneuvers around obstacles and explore the technology behind its design!</p>
+                    <p>This is an obstacle avoiding robot made by my students under my coordination. Our robot can detect obstacles up to 10 cm in front of it and adjust its direction accordingly to avoid collisions and obstacles. This project demonstrates the integration of sensors and navigation algorithms to create a functional and efficient obstacle-avoiding robot. You can also find it on my YouTube channel.</p>
                 </div>
                 <div class="about-col-1">
                     <!-- Video -->
-                    <video id="ilkvid" controls loop autoplay>
-                        <source src="obstaclevid1.mp4" type="video/mp4">
+                    <video id="ilkvid" controls loop>
+                        <source src="1014.mp4" type="video/mp4">
                     </video>
                     
                     <hr>
